<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2018 NAVER Corp.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.navercorp.pinpoint</groupId>
        <artifactId>pinpoint-profiler-optional-parent</artifactId>
        <relativePath>../profiler-optional-parent</relativePath>
        <version>2.0.3-SNAPSHOT</version>
    </parent>

    <artifactId>pinpoint-profiler-optional-jdk9</artifactId>
    <name>pinpoint-profiler-optional-jdk9</name>
    <packaging>jar</packaging>
    <description>pinpoint profiler optional package for jdk 9</description>

    <properties>
        <jdk.version>9</jdk.version>
        <jdk.home>${env.JAVA_9_HOME}</jdk.home>

        <!-- http://openclover.org/ -->
        <!-- https://bitbucket.org/openclover/clover/issues/61/430-support-java-9 -->
        <!-- 4.3 will support java9 -->
        <plugin.clover.skip>true</plugin.clover.skip>
        <plugin.animal-sniffer.skip>true</plugin.animal-sniffer.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Temporary patch for java9-->
        <dependency>
            <groupId>org.openclover</groupId>
            <artifactId>clover</artifactId>
            <version>4.2.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
                        -Dfile.encoding=${encoding}
                    </argLine>
                </configuration>
            </plugin>
            
        </plugins>
    </build>

</project>